feat: 수익률 출력 기능 구현